Add Event.lastRawHeader() method (CORE-766)
This is needed for upgrading applications to the new Security Plugin API
so they don't unnecessarily convert the Security-Label header to and
from a String which could cause label corruption